set overflow on boxshadow element to prevent the shadow from being hidden
added helper class of .contained to force overflow hidden on elements that use textshadow when needed

--- a/src/less/unm-core-styles.less
+++ b/src/less/unm-core-styles.less
@@ -194,7 +194,10 @@ a.skip2content {
     }
 
 /* boxshadow */
-.boxshadow {position:relative;}
+.boxshadow {
+    position:relative;
+    overflow: visible !important;
+    }
 .boxshadow:before, .boxshadow:after {
    content: " ";
    position: absolute;
@@ -241,5 +244,12 @@ a.skip2content {
 
 /* stucco texture overlay */
 .stucco {background-image: url(//webcore.unm.edu/v2/images/stucco.png);}
+
+/* helper class to contain contents in an element */
+.contained {
+    overflow: hidden;
+}
+
+
 
 /* end */
